--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=chatFlow
+# ???? ????? ?????? ?????? ?????? KMS ??? ???? ???? ????? ????? ???
 db.url=jdbc:sqlserver://localhost:1433;database=CHAT
 db.username=sa
 db.password=amiad123
@@ -9,3 +10,4 @@ email.password=uimq eohp yzoy nfgh
 email.smtp.host=smtp.gmail.com
 email.smtp.port=587
 
+token.secret=U3VwZXJTZWNyZXRLZXkxMjMh
